some texts for ticket selling

--- a/djangocon/templates/attendees/mail_payment_received.html
+++ b/djangocon/templates/attendees/mail_payment_received.html
@@ -1,6 +1,6 @@
 Hello {{ attendee.first_name }} {{ attendee.last_name }},
 
-we received your payment details. All done and you're in :-)
+we received your payment details. This is your booking confirmation!
 
 Your booking information (you will need this mail to attend, don't delete!):
 
