--- a/djangocon/templates/attendees/payment_cancel.html
+++ b/djangocon/templates/attendees/payment_cancel.html
@@ -1,12 +1,29 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block title %}Register{% endblock title %}
 
 {% block content %}
     <div class="container_12 clearfix">
-        <div class="grid_6">
-            <h3>Register for DjangoCon Europe 2010</h3>
-            <h4>Payment failed!</h4>
-            <p>Something went wrong..</p>
-            <p>For now, you might <a href="{% url home %}">head home</a>.</p>
+        <div class="grid_7 suffix_1">
+            <section id="tickets_register">
+                <h1>Register for DjangoCon Europe 2010</h1>
+                <h2>Ticket payment failed!</h2>
+                <p>
+                    We are sorry, but something went wrong while processing your payment.
+                </p>
+                <p>
+                    If you don't aborted the payment manually, please contact us!
+                </p>
+            </section>
+        </div>
+        <div class="grid_4">
+            <section id="tickets_register">
+                <h1>Additional information</h1>
+                <h2>Contact</h2>
+                <p>
+                    If you have questions regarding the tickets, just send us a mail to <a href="mailto:feedback@djangocon.eu">feedback@djangocon.eu</a>.
+                </p>
+            </section>
         </div>
     </div>
 {% endblock content %}
