--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -2,28 +2,27 @@
 {% block title %}Venue{% endblock %}
 {% block content %}
     <div class="container_12 clearfix">
-        <div class="grid_12">
-            <h3>Venue</h3>
-        </div>
-        <div class="grid_7">
-            <h4>Palisa.de</h4>
+        <section class="grid_7">
+            <h1>Venue</h1>
+			<h2>Palisa.de</h2>
             <p>
                 The venue is an extensively restored industrial monument build in 1899 and is just a few minutes 
                 away from Alexanderplatz, a large place in the middle of Berlin.
             </p>
-            <h5>Ressources</h5>
+            <h2>Resources</h2>
             <ul style="margin-left: 1em;margin-top:0.5em;">
                 <li><a target="_blank" href="http://palisa.de/en/">Palisa.de - Tagungs- und Veranstaltungszentrum</a></li>
                 <li><a target="_blank" href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en">View venue on Google Maps</a></li>
             </ul>
-        </div>
-        <div class="grid_5">
-            <h4>Location</h4>
-            <p>
+        </section>
+        <section class="grid_5">
+            <h1>Location</h1>
+            <p>Palisadenstraße 48, 10243 Berlin, Germany</p>
+			<p>
                 <a href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en" target="_blank">
-                    <img src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&zoom=13&markers=52.518792,13.439455&size=300x250&sensor=false&key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
+                    <img id="map" src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&zoom=13&markers=52.518792,13.439455&size=300x250&sensor=false&key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
                 </a>
             </p>
-        </div>
+        </section>
     </div>
 {% endblock content %}
