Technically there aren't other closed rooms, only one other big room, let's don't get the hopes high.

--- a/djangocon/templates/talks/submit.html
+++ b/djangocon/templates/talks/submit.html
@@ -137,7 +137,7 @@
 				<h2>Talk Alternatives</h2>
 				<p>
 					If a full-length presentation is overkill for your topic, consider giving a 5-minute lightning talk! There will
-					be several lightning-talk sessions throughout the conference, as well as adjoining "Open Space" rooms for
+					be several lightning-talk sessions throughout the conference, as well as adjoining "Open Spaces" for
 					informal and spontaneous presentations. Lightning talks can be on a wide variety of topics! Talk about a cool project
 					you're working on, some technique or tool that you want to highlight, or a cool story you wish to share with the
 					Django community&mdash;so long as your talk fits into 5 minutes.
