--- a/djangocon/templates/talks/submit.html
+++ b/djangocon/templates/talks/submit.html
@@ -20,7 +20,7 @@
             $('#formerrors').fadeIn(1000);
         });
     </script>
-{% endblock %}
+{% endblock extra_js %}
 
 {% block content %}
     <div class="container_12 clearfix">
