Adding lodging info, resources to venue page.

--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -19,10 +19,10 @@
     <div class="container_12 clearfix">
         <section class="grid_7">
             <h1>Venue</h1>
-			<h2>Palisa.de</h2>
+			<h2>Conference Hall - Palisa.de</h2>
             <p>
-                The venue is an extensively restored industrial monument build in 1899 and is just a few minutes 
-                away from Alexanderplatz, a large place in the middle of Berlin.
+                The venue is an extensively restored industrial monument built in 1899 and is just a few minutes 
+                away from Alexanderplatz, a large square in Berlin's city center.
             </p>
 			<p>
 				<a class="colorbox" rel="venue_photos" href="{{ STATIC_URL }}img/venue_1.jpg"><img src="{{ STATIC_URL }}img/venue_1_thumb.jpg" alt="Exterior of the venue building"></a>
@@ -30,10 +30,28 @@
 				<a class="colorbox" rel="venue_photos" href="{{ STATIC_URL }}img/venue_3.jpg"><img src="{{ STATIC_URL }}img/venue_3_thumb.jpg" alt="Interior of the conference room, empty"></a>
 				<a class="colorbox" rel="venue_photos" href="{{ STATIC_URL }}img/venue_4.jpg"><img src="{{ STATIC_URL }}img/venue_4_thumb.jpg" alt="Interior of the conference room during a conference"></a>				
 			</p>
+			<h2>Lodging</h2>
+			<p>
+				Unfortunately, attempts to reserve a block of rooms at a hotel close to the venue were unsuccessful. The practical
+				impact on attendees is that hotel reservations must be made individually.
+			</p>
+			<p>
+				Regardless, we hope that most djangonauts will be staying at the same hotels for practical and social reasons.
+				To that end, a list of suitable hotels is being compiled and will be posted here, as well as announced via the
+				<a href="{% url blog_index %}">conference blog</a>.
+			</p>	
             <h2>Resources</h2>
-            <ul style="margin-left: 1em;margin-top:0.5em;">
-                <li><a target="_blank" href="http://palisa.de/en/">Palisa.de - Tagungs- und Veranstaltungszentrum</a></li>
-                <li><a target="_blank" href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en">View venue on Google Maps</a></li>
+			<p>
+				We plan on posting a list of resources to help attendees get around Berlin. Watch this space for links and information
+				useful for the intrepid djangonaut about town.
+			</p>
+			<ul>
+				<li><strong>Coming soon:</strong> Getting a prepaid voice/data SIM card in Berlin.</li>
+				<li><strong>Coming soon:</strong> Public transportation: getting around Berlin.</li>
+				<li><strong>Coming soon:</strong> Local tips: be more awesome than the average tourist.</li>
+				<li><strong>Coming soon:</strong> Sightseeing: be just like the average tourist.</li>
+                <li><a target="_blank" href="http://palisa.de/en/">Palisa.de - Conference Hall.</a></li>
+                <li><a target="_blank" href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en">View venue location on Google Maps.</a></li>
             </ul>
         </section>
         <section class="grid_5">
