Changing opacity of colorbox.

--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.colorbox-min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
-			$('.colorbox[rel="venue_photos"]').colorbox()
+			$('.colorbox[rel="venue_photos"]').colorbox({opacity: 0.6})
         });
     </script>
 {% endblock extra_js %}
